# MLOps-Lab3

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  Makefile  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml  cicd.yml
api/: api.py
cli/: cli.py
logic/: predictor.py
mylib/: .dockerignore
results/: model.onnx
src/: inference.py  select_model.py  train.py
templates/: home.html
tests/: test_api.py  test_artifacts.py  test_cli.py  test_logic.py
