[project]
name = "mlops-lab3-demo"
version = "0.1.0"
description = "MLOps Lab 3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.15",
    "black>=23.0",
    "uvicorn>=0.38.0",
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "gradio>=5.49.1",
    "requests>=2.32.5",
    "docker>=7.1.0",
    "huggingface-hub>=0.26.0",
    "torch",
    "torchvision",
    "mlflow",
    "onnx",
    "onnxruntime",
    "numpy",
    "pandas",
    "onnxscript>=0.5.6",
    "matplotlib",
    "pip",
]
